--- a/index.html
+++ b/index.html
@@ -92,5 +92,89 @@
         </div>
       </div>
     </section>
+    <section id="projects">
+      <h3>MEUS PROJETOS</h3>
+      <div id="cards-projects">
+        <div class="card">
+          <div class="presentation">
+            <span class="number">1</span>
+            <img src="./assets/delltoro.png" alt="Imagem do projeto DellToro Steakhouse" class="img-project">
+          </div>
+          <h4 class="title-project">DellToro Steakhouse</h4>
+          <p class="description-project">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Gravida ipsum sed egestas egestas at enim. Diam tortor proin eu morbi nunc. Viverra sed eu arcu, enim, enim, adipiscing neque.
+          </p>
+          <button class="view-project">
+            <a href="https://jeremarques.github.io/dell-toro-steakhouse">VER PROJETO 
+              <svg width="17" height="12" viewBox="0 0 17 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1 5.25C0.585786 5.25 0.25 5.58579 0.25 6C0.25 6.41421 0.585786 6.75 1 6.75L1 5.25ZM16.5303 6.53033C16.8232 6.23744 16.8232 5.76256 16.5303 5.46967L11.7574 0.6967C11.4645 0.403807 10.9896 0.403807 10.6967 0.6967C10.4038 0.989593 10.4038 1.46447 10.6967 1.75736L14.9393 6L10.6967 10.2426C10.4038 10.5355 10.4038 11.0104 10.6967 11.3033C10.9896 11.5962 11.4645 11.5962 11.7574 11.3033L16.5303 6.53033ZM1 6.75L16 6.75L16 5.25L1 5.25L1 6.75Z" fill="white"/>
+              </svg>
+            </a>
+          </button>
+
+        </div>
+        <div class="card">
+          <div class="presentation">
+            <span class="number">2</span>
+            <img src="./assets/search-user.png" alt="Imagem do projeto DellToro Steakhouse" class="img-project">
+          </div>
+          <h4 class="title-project">Search User (Github API)</h4>
+          <p class="description-project">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Gravida ipsum sed egestas egestas at enim. Diam tortor proin eu morbi nunc. Viverra sed eu arcu, enim, enim, adipiscing neque.
+          </p>
+          <button class="view-project">
+            <a href="https://jeremarques.github.io/dell-toro-steakhouse">VER PROJETO 
+              <svg width="17" height="12" viewBox="0 0 17 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1 5.25C0.585786 5.25 0.25 5.58579 0.25 6C0.25 6.41421 0.585786 6.75 1 6.75L1 5.25ZM16.5303 6.53033C16.8232 6.23744 16.8232 5.76256 16.5303 5.46967L11.7574 0.6967C11.4645 0.403807 10.9896 0.403807 10.6967 0.6967C10.4038 0.989593 10.4038 1.46447 10.6967 1.75736L14.9393 6L10.6967 10.2426C10.4038 10.5355 10.4038 11.0104 10.6967 11.3033C10.9896 11.5962 11.4645 11.5962 11.7574 11.3033L16.5303 6.53033ZM1 6.75L16 6.75L16 5.25L1 5.25L1 6.75Z" fill="white"/>
+              </svg>
+            </a>
+          </button>
+
+        </div>
+        <div class="card">
+          <div class="presentation">
+            <span class="number">3</span>
+            <img src="./assets/wire.png" alt="Imagem do projeto DellToro Steakhouse" class="img-project">
+          </div>
+          <h4 class="title-project">Lista de presença</h4>
+          <p class="description-project">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Gravida ipsum sed egestas egestas at enim. Diam tortor proin eu morbi nunc. Viverra sed eu arcu, enim, enim, adipiscing neque.
+          </p>
+          <button class="view-project">
+            <a href="https://jeremarques.github.io/dell-toro-steakhouse">VER PROJETO 
+              <svg width="17" height="12" viewBox="0 0 17 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1 5.25C0.585786 5.25 0.25 5.58579 0.25 6C0.25 6.41421 0.585786 6.75 1 6.75L1 5.25ZM16.5303 6.53033C16.8232 6.23744 16.8232 5.76256 16.5303 5.46967L11.7574 0.6967C11.4645 0.403807 10.9896 0.403807 10.6967 0.6967C10.4038 0.989593 10.4038 1.46447 10.6967 1.75736L14.9393 6L10.6967 10.2426C10.4038 10.5355 10.4038 11.0104 10.6967 11.3033C10.9896 11.5962 11.4645 11.5962 11.7574 11.3033L16.5303 6.53033ZM1 6.75L16 6.75L16 5.25L1 5.25L1 6.75Z" fill="white"/>
+              </svg>
+            </a>
+          </button>
+
+        </div>
+        <div class="card">
+          <div class="presentation">
+            <span class="number">4</span>
+            <img src="./assets/cronometro.png" alt="Imagem do projeto DellToro Steakhouse" class="img-project">
+          </div>
+          <h4 class="title-project">Cronômetro</h4>
+          <p class="description-project">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Gravida ipsum sed egestas egestas at enim. Diam tortor proin eu morbi nunc. Viverra sed eu arcu, enim, enim, adipiscing neque.
+          </p>
+          <button class="view-project">
+            <a href="https://jeremarques.github.io/dell-toro-steakhouse">VER PROJETO 
+              <svg width="17" height="12" viewBox="0 0 17 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1 5.25C0.585786 5.25 0.25 5.58579 0.25 6C0.25 6.41421 0.585786 6.75 1 6.75L1 5.25ZM16.5303 6.53033C16.8232 6.23744 16.8232 5.76256 16.5303 5.46967L11.7574 0.6967C11.4645 0.403807 10.9896 0.403807 10.6967 0.6967C10.4038 0.989593 10.4038 1.46447 10.6967 1.75736L14.9393 6L10.6967 10.2426C10.4038 10.5355 10.4038 11.0104 10.6967 11.3033C10.9896 11.5962 11.4645 11.5962 11.7574 11.3033L16.5303 6.53033ZM1 6.75L16 6.75L16 5.25L1 5.25L1 6.75Z" fill="white"/>
+              </svg>
+            </a>
+          </button>
+
+        </div>
+      </div>
+      <button class="view-projects">
+        <a href="https://jeremarques.github.io/dell-toro-steakhouse">VER MAIS PROJETOS 
+          <svg width="17" height="12" viewBox="0 0 17 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M1 5.25C0.585786 5.25 0.25 5.58579 0.25 6C0.25 6.41421 0.585786 6.75 1 6.75L1 5.25ZM16.5303 6.53033C16.8232 6.23744 16.8232 5.76256 16.5303 5.46967L11.7574 0.6967C11.4645 0.403807 10.9896 0.403807 10.6967 0.6967C10.4038 0.989593 10.4038 1.46447 10.6967 1.75736L14.9393 6L10.6967 10.2426C10.4038 10.5355 10.4038 11.0104 10.6967 11.3033C10.9896 11.5962 11.4645 11.5962 11.7574 11.3033L16.5303 6.53033ZM1 6.75L16 6.75L16 5.25L1 5.25L1 6.75Z" fill="white"/>
+          </svg>
+        </a>
+      </button>
+    </section>
   </body>
 </html>
