First version official

--- a/index.html
+++ b/index.html
@@ -10,12 +10,24 @@
     <link rel="manifest" href="./assets/favicon/site.webmanifest">
     <link rel="mask-icon" href="./assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#000314">
+    <meta name="keywords" content="frontend, backend, animation, css, development web, desenvolvimento web, ux, ui, uxui, html, html5, design, vscode, motion, javascript, js, ux design, ui design, web design, portifolio, projects, projetos">
+    <meta name="author" content="Jeremias Marques">
+    <meta name="title" content="Jeremias Marques | Front-End Developer">
+    <meta name="description" content="(Site em desenvolvimento) Oi, eu sou Jeremias Marques, desenvolvedor Front-end e um amante da tecnologia e do design. Nesse portifolio apresento um pouco sobre mim, meu trabalho, e os melhores projetos que eu já fiz.">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
+    <!-- Title -->
     <title>Jeremias Marques | Front-end Developer</title>
+    <!-- Facebook card -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Jeremias Marques | Front-End Developer">
+    <meta property="og:description" content="(Site em desenvolvimento) Oi, eu sou Jeremias Marques, desenvolvedor Front-end e um amante da tecnologia e do design. Nesse portifolio apresento um pouco sobre mim, meu trabalho, e os melhores projetos que eu já fiz.">
+    <meta property="og:image" content="assets/preloader-ogimage.png">
   </head>
   <body>
     <div id="preloader">
@@ -168,8 +180,8 @@
                 </a>
               </button>
             </div>
-            <div style="transition: all .2s ease" id="shadow"></div>
           </div>
+          <div style="transition: all .3s ease" id="shadow"></div>
         </div>
         <button id="prev">
           <svg  width="15" height="10" viewBox="0 0 17 12" fill="none" xmlns="http://www.w3.org/2000/svg">
