--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <a class="anim-nav" href="#home">INÍCIO</a>
       <a class="anim-nav" href="#projects">PROJETOS</a>
       <img class="anim-nav" id="logomarca" src="./assets/logo-editable.svg" alt="Logomarca Jeremias Marques">
-      <a class="anim-nav" href="#">SOBRE MIM</a>
+      <a class="anim-nav" href="#about-me">SOBRE MIM</a>
       <a class="anim-nav" href="#">CONTATO</a>
     </nav>
     <div id="content">
@@ -112,54 +112,77 @@
         <h3>MEUS PROJETOS</h3>
         <div class="projects-box">
           <div class="projects">
-            <div class="description-of-projects">
-              <svg class="open-new-window" width="20" height="20" viewBox="0 0 38 39" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M13.915 22.9643C13.343 23.5635 13.365 24.513 13.9643 25.085C14.5635 25.657 15.513 25.635 16.085 25.0357L13.915 22.9643ZM37.4996 1.96512C37.4803 1.13692 36.7933 0.481144 35.9651 0.500404L22.4688 0.814273C21.6406 0.833533 20.9848 1.52054 21.0041 2.34874C21.0233 3.17694 21.7103 3.83272 22.5385 3.81346L34.5353 3.53447L34.8143 15.5312C34.8335 16.3594 35.5205 17.0152 36.3487 16.9959C37.1769 16.9767 37.8327 16.2897 37.8135 15.4615L37.4996 1.96512ZM16.085 25.0357L37.085 3.03571L34.915 0.964285L13.915 22.9643L16.085 25.0357Z" fill="white"/>
-                <rect x="2" y="11" width="26" height="26" rx="6" stroke="white" stroke-width="4"/>
-              </svg>
-              <h4 class="title-project">DellToro Steakhouse</h4>
-              <p class="paragraph-project">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed porro vero quidem obcaecati hic, quas perferendis magnam voluptates. Excepturi quidem ducimus velit.</p>
-            </div>
+              <a target="_blank" href="https://jeremarques.github.io/dell-toro-steakhouse">
+                  <img class="bg-projects" src="./assets/jeremarques.github.io_dell-toro-steakhouse_.png" alt="">
+                <div class="description-of-projects">
+                    <svg class="open-new-window" width="20" height="20" viewBox="0 0 38 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M13.915 22.9643C13.343 23.5635 13.365 24.513 13.9643 25.085C14.5635 25.657 15.513 25.635 16.085 25.0357L13.915 22.9643ZM37.4996 1.96512C37.4803 1.13692 36.7933 0.481144 35.9651 0.500404L22.4688 0.814273C21.6406 0.833533 20.9848 1.52054 21.0041 2.34874C21.0233 3.17694 21.7103 3.83272 22.5385 3.81346L34.5353 3.53447L34.8143 15.5312C34.8335 16.3594 35.5205 17.0152 36.3487 16.9959C37.1769 16.9767 37.8327 16.2897 37.8135 15.4615L37.4996 1.96512ZM16.085 25.0357L37.085 3.03571L34.915 0.964285L13.915 22.9643L16.085 25.0357Z" fill="white"/>
+                      <rect x="2" y="11" width="26" height="26" rx="6" stroke="white" stroke-width="4"/>
+                    </svg>
+                    <h4 class="title-project">DellToro Steakhouse</h4>
+                    <p class="paragraph-project">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed porro vero quidem obcaecati hic, quas perferendis magnam voluptates. Excepturi quidem ducimus velit.</p>
+                </div>
+              </a>
           </div>
           <div class="projects">
-            <div class="description-of-projects">
-              <svg class="open-new-window" width="20" height="20" viewBox="0 0 38 39" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M13.915 22.9643C13.343 23.5635 13.365 24.513 13.9643 25.085C14.5635 25.657 15.513 25.635 16.085 25.0357L13.915 22.9643ZM37.4996 1.96512C37.4803 1.13692 36.7933 0.481144 35.9651 0.500404L22.4688 0.814273C21.6406 0.833533 20.9848 1.52054 21.0041 2.34874C21.0233 3.17694 21.7103 3.83272 22.5385 3.81346L34.5353 3.53447L34.8143 15.5312C34.8335 16.3594 35.5205 17.0152 36.3487 16.9959C37.1769 16.9767 37.8327 16.2897 37.8135 15.4615L37.4996 1.96512ZM16.085 25.0357L37.085 3.03571L34.915 0.964285L13.915 22.9643L16.085 25.0357Z" fill="white"/>
-                <rect x="2" y="11" width="26" height="26" rx="6" stroke="white" stroke-width="4"/>
-              </svg>
-              <h4 class="title-project">Weather Website</h4>
-              <p class="paragraph-project">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed porro vero quidem obcaecati hic, quas perferendis magnam voluptates. Excepturi quidem ducimus velit.</p>
-            </div>
-          </div>
-          <div class="projects">
-            <div class="description-of-projects">
-              <svg class="open-new-window" width="20" height="20" viewBox="0 0 38 39" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M13.915 22.9643C13.343 23.5635 13.365 24.513 13.9643 25.085C14.5635 25.657 15.513 25.635 16.085 25.0357L13.915 22.9643ZM37.4996 1.96512C37.4803 1.13692 36.7933 0.481144 35.9651 0.500404L22.4688 0.814273C21.6406 0.833533 20.9848 1.52054 21.0041 2.34874C21.0233 3.17694 21.7103 3.83272 22.5385 3.81346L34.5353 3.53447L34.8143 15.5312C34.8335 16.3594 35.5205 17.0152 36.3487 16.9959C37.1769 16.9767 37.8327 16.2897 37.8135 15.4615L37.4996 1.96512ZM16.085 25.0357L37.085 3.03571L34.915 0.964285L13.915 22.9643L16.085 25.0357Z" fill="white"/>
-                <rect x="2" y="11" width="26" height="26" rx="6" stroke="white" stroke-width="4"/>
+            <a target="_blank" href="https://jereweather.vercel.app">
+              <img class="bg-projects" src="./assets/jereweather.vercel.app_.png" alt="">
+              <div class="description-of-projects">
+                <svg class="open-new-window" width="20" height="20" viewBox="0 0 38 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M13.915 22.9643C13.343 23.5635 13.365 24.513 13.9643 25.085C14.5635 25.657 15.513 25.635 16.085 25.0357L13.915 22.9643ZM37.4996 1.96512C37.4803 1.13692 36.7933 0.481144 35.9651 0.500404L22.4688 0.814273C21.6406 0.833533 20.9848 1.52054 21.0041 2.34874C21.0233 3.17694 21.7103 3.83272 22.5385 3.81346L34.5353 3.53447L34.8143 15.5312C34.8335 16.3594 35.5205 17.0152 36.3487 16.9959C37.1769 16.9767 37.8327 16.2897 37.8135 15.4615L37.4996 1.96512ZM16.085 25.0357L37.085 3.03571L34.915 0.964285L13.915 22.9643L16.085 25.0357Z" fill="white"/>
+                  <rect x="2" y="11" width="26" height="26" rx="6" stroke="white" stroke-width="4"/>
                 </svg>
-              <h4 class="title-project">Search User of Github</h4>
-              <p class="paragraph-project">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed porro vero quidem obcaecati hic, quas perferendis magnam voluptates. Excepturi quidem ducimus velit.</p>
-            </div>
+                <h4 class="title-project">Weather Website</h4>
+                <p class="paragraph-project">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed porro vero quidem obcaecati hic, quas perferendis magnam voluptates. Excepturi quidem ducimus velit.</p>
+              </div>
+            </a>
           </div>
           <div class="projects">
-            <div class="description-of-projects">
-              <svg class="open-new-window" width="20" height="20" viewBox="0 0 38 39" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M13.915 22.9643C13.343 23.5635 13.365 24.513 13.9643 25.085C14.5635 25.657 15.513 25.635 16.085 25.0357L13.915 22.9643ZM37.4996 1.96512C37.4803 1.13692 36.7933 0.481144 35.9651 0.500404L22.4688 0.814273C21.6406 0.833533 20.9848 1.52054 21.0041 2.34874C21.0233 3.17694 21.7103 3.83272 22.5385 3.81346L34.5353 3.53447L34.8143 15.5312C34.8335 16.3594 35.5205 17.0152 36.3487 16.9959C37.1769 16.9767 37.8327 16.2897 37.8135 15.4615L37.4996 1.96512ZM16.085 25.0357L37.085 3.03571L34.915 0.964285L13.915 22.9643L16.085 25.0357Z" fill="white"/>
-                <rect x="2" y="11" width="26" height="26" rx="6" stroke="white" stroke-width="4"/>
-              </svg>
-              <h4 class="title-project">List of presence</h4>
-              <p class="paragraph-project">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed porro vero quidem obcaecati hic, quas perferendis magnam voluptates. Excepturi quidem ducimus velit.</p>
+            <a target="_blank" href="https://jeremarques.github.io/search-user-with-github-api/">
+              <img class="bg-projects" src="./assets/jeremarques.github.io_search-user-with-github-api_.png" alt="">
+              <div class="description-of-projects">
+                <svg class="open-new-window" width="20" height="20" viewBox="0 0 38 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M13.915 22.9643C13.343 23.5635 13.365 24.513 13.9643 25.085C14.5635 25.657 15.513 25.635 16.085 25.0357L13.915 22.9643ZM37.4996 1.96512C37.4803 1.13692 36.7933 0.481144 35.9651 0.500404L22.4688 0.814273C21.6406 0.833533 20.9848 1.52054 21.0041 2.34874C21.0233 3.17694 21.7103 3.83272 22.5385 3.81346L34.5353 3.53447L34.8143 15.5312C34.8335 16.3594 35.5205 17.0152 36.3487 16.9959C37.1769 16.9767 37.8327 16.2897 37.8135 15.4615L37.4996 1.96512ZM16.085 25.0357L37.085 3.03571L34.915 0.964285L13.915 22.9643L16.085 25.0357Z" fill="white"/>
+                  <rect x="2" y="11" width="26" height="26" rx="6" stroke="white" stroke-width="4"/>
+                  </svg>
+                <h4 class="title-project">Search User of Github</h4>
+                <p class="paragraph-project">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed porro vero quidem obcaecati hic, quas perferendis magnam voluptates. Excepturi quidem ducimus velit.</p>
+              </div>
+            </a>
+          </div>
+          <div class="projects">
+            <a href="https://list-of-collaborators-jsx.vercel.app/" target="_blank">
+              <img class="bg-projects" src="./assets/list-of-collaborators-jsx.vercel.app_.png" alt="">
+              <div class="description-of-projects">
+                <svg class="open-new-window" width="20" height="20" viewBox="0 0 38 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M13.915 22.9643C13.343 23.5635 13.365 24.513 13.9643 25.085C14.5635 25.657 15.513 25.635 16.085 25.0357L13.915 22.9643ZM37.4996 1.96512C37.4803 1.13692 36.7933 0.481144 35.9651 0.500404L22.4688 0.814273C21.6406 0.833533 20.9848 1.52054 21.0041 2.34874C21.0233 3.17694 21.7103 3.83272 22.5385 3.81346L34.5353 3.53447L34.8143 15.5312C34.8335 16.3594 35.5205 17.0152 36.3487 16.9959C37.1769 16.9767 37.8327 16.2897 37.8135 15.4615L37.4996 1.96512ZM16.085 25.0357L37.085 3.03571L34.915 0.964285L13.915 22.9643L16.085 25.0357Z" fill="white"/>
+                  <rect x="2" y="11" width="26" height="26" rx="6" stroke="white" stroke-width="4"/>
+                </svg>
+                <h4 class="title-project">List of presence</h4>
+                <p class="paragraph-project">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed porro vero quidem obcaecati hic, quas perferendis magnam voluptates. Excepturi quidem ducimus velit.</p>
             </div>
+            </a>
           </div>
         </div>
 
         <button class="view-projects">
-          <a href="https://jeremarques.github.io/dell-toro-steakhouse">VER MAIS PROJETOS 
+          <a href="#">VER MAIS PROJETOS 
             <svg width="18" height="12" viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M0.803207 5.25C0.388994 5.25 0.0532074 5.58579 0.0532074 6C0.0532074 6.41421 0.388994 6.75 0.803207 6.75L0.803207 5.25ZM17.5338 6.53033C17.8267 6.23744 17.8267 5.76256 17.5338 5.46967L12.7608 0.6967C12.4679 0.403807 11.9931 0.403807 11.7002 0.6967C11.4073 0.989593 11.4073 1.46447 11.7002 1.75736L15.9428 6L11.7002 10.2426C11.4073 10.5355 11.4073 11.0104 11.7002 11.3033C11.9931 11.5962 12.4679 11.5962 12.7608 11.3033L17.5338 6.53033ZM0.803207 6.75L17.0035 6.75L17.0035 5.25L0.803207 5.25L0.803207 6.75Z" fill="white"/>
             </svg>
           </a>
         </button>
+      </section>
+      <section id="about-me">
+        <h3>SOBRE MIM</h3>
+        <div class="content-about-me">
+          <div class="text-about-me">
+            <p>Olá, me chamo Jeremias, sou Desenvolvedor Web desde os 14 anos de idade, conheci a programação bem novo e depois de algum tempo conheci a stack que brilhou meus olhos, Desenvolvimento Web Front-End, que misturava Design com Programação, as duas coisas que eu mais gosto de trabalhar, foco na criação de sites modernos, e performáticos para que o usuário tenha uma ótima esperiência de navegação.</p>
+          </div>
+          <div id="avatar-about-me">
+            <img src="./assets/avatar-home.png" alt="avatar de Jeremias Marques">
+          </div>
+        </div>
       </section>
     </div>
 
@@ -168,6 +191,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
     <!-- SCRIPTS -->
     <script src="./index.js"></script>
+    <script src="./assets/vanilla-tilt.min.js"></script>
 
   </body>
 </html>
