Finish resposive site

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 </a>
               </div>
               <div class="logo-contact">
-                <svg width="300" height="199" viewBox="0 0 300 199" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg viewBox="0 0 300 199" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <g id="logo-hover" opacity="0.9">
                   <path d="M184.008 87.2535L170.981 81.9019L128.392 93.473L119.342 89.6581L123.069 80.6363L104.06 72.8077L110.856 77.2011L104.28 93.2922L126.513 102.513L184.008 87.2535Z" fill="#E2E2E2"/>
                   <path d="M174.426 80.9979L185.699 78.1051L207.933 87.3258L196.033 84.0714L187.422 86.3314L174.426 80.9979Z" fill="#E2E2E2"/>
